# fhir-mcp-server

./: .env.txt  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yaml  trivy-scan.yml
scripts/: get_capabilities_patient.py
src/fhir_mcp_server/: server.py  utils.py
src/fhir_mcp_server/field_filter/: __init__.py  fhirpath_field_extractor.py  resource_filter.py  response_filter.py
src/fhir_mcp_server/filtering/: __init__.py  fhirpath_evaluator.py  resource_filter.py
tests/e2e/: test_tools.py
tests/unit/: test_utils.py
tests/unit/field_filter/: test_fhirpath_field_extractor.py  test_resource_filter.py  test_response_filter.py
tests/unit/filtering/: __init__.py  test_fhirpath_field_extractor.py  test_resource_filter.py
