[project]
authors = [
  {name = "Vimukthi Rajapaksha", email = "vimukthir@wso2.com"},
  {name = "Joel Sathiyendra", email = "joel@wso2.com"},
  {name = "Nirmal Fernando", email = "nirmal@wso2.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp[cli]==1.27.1",
  "aiohttp==3.13.5",
  "fhirpy==2.2.0",
]
description = "A Model Context Protocol (MCP) server that provides seamless, standardized access to Fast Healthcare Interoperability Resources (FHIR) data from any compatible FHIR server. Designed for easy integration with AI tools, developer workflows, and healthcare applications, it enables natural language and programmatic search, retrieval, and analysis of clinical data."
keywords = [
  "fhir",
  "healthcare",
  "mcp",
  "model-context-protocol",
  "modelcontextprotocol",
  "llm",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
name = "fhir-mcp-server"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
version = "0.10.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_mcp_server"]

[project.scripts]
fhir-mcp-server = "fhir_mcp_server.server:main"

[[tool.uv.index]]
name = "pypi"
publish-url = "https://upload.pypi.org/legacy/"
url = "https://pypi.org/simple/"

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
]
test = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/wso2/fhir-mcp-server/issues"
"Documentation" = "https://github.com/wso2/fhir-mcp-server/blob/main/README.md"
"Homepage" = "https://github.com/wso2/fhir-mcp-server"
